--- a/index.html
+++ b/index.html
@@ -1,42 +1,55 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Nick Goodall</title>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Nick Goodall</title>
 
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="icon" type="image/png" href="n.png">
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="icon" type="image/png" href="n.png" />
 
-  <meta property="og:title" content="Nick Goodall" />
-  <meta property="og:description" content="">
-  <meta name="twitter:site" content="@nbgoodall">
-</head>
-<body>
-  <h1>Nick Goodall</h1>
+    <meta property="og:title" content="Nick Goodall" />
+    <meta property="og:description" content="" />
+    <meta name="twitter:site" content="@nbgoodall" />
+  </head>
+  <body>
+    <h1>Nick Goodall</h1>
 
-  <p>Hello, I’m Nick, a software engineer living ~somewhere~ and rebuilding a boat. I love making things and I’m particularly good at building apps, both for the web or mobile.</p>
+    <p>
+      Hello, I’m Nick, a software engineer living ~somewhere~ and rebuilding a
+      boat. I love making things and I’m particularly good at building apps,
+      both for the web or mobile.
+    </p>
 
-  <p>If there’s a project you want help with or want to say hi, <a href="mailto:nickg@hey.com">send me an email.</a></p>
+    <p>
+      If there’s a project you want help with or want to say hi,
+      <a href="mailto:nickg@hey.com">send me an email.</a>
+    </p>
 
-  <h2>Projects</h2>
+    <h2>Projects</h2>
 
-  <h3>Katona</h3>
+    <h3>Katona</h3>
 
-  <p><a href="https://katona.blog" target="_blank">katona.blog</a></p>
+    <p><a href="https://katona.blog" target="_blank">katona.blog</a></p>
 
-  <p>I'm rebuilding a narrowboat, and this is where I write updates and post photos about it.</p>
+    <p>
+      I'm rebuilding a narrowboat, and this is where I write updates and post
+      photos about it.
+    </p>
 
-  <h3>Occasionly</h3>
+    <h3>Occasionly</h3>
 
-  <p><a href="https://occasionly.io" target="_blank">occasionly.io</a></p>
+    <p><a href="https://occasionly.io" target="_blank">occasionly.io</a></p>
 
-  <p>A platform-agnostic events manager for anyone tired of Facebook. Currently you can invite people through WhatsApp, email, Signal, or Telegram.</p>
+    <p>
+      A platform-agnostic events manager for anyone tired of Facebook. Currently
+      you can invite people through WhatsApp, email, Signal, or Telegram.
+    </p>
 
-  <h2>Links</h2>
-  <ul>
-    <li><a href="https://github.com/nbgoodall" target="_blank">GitHub</a></li>
-    <li><a href="https://x.com/nbgoodall" target="_blank">X</a></li>
-  </ul>
-</body>
+    <h2>Links</h2>
+    <ul>
+      <li><a href="https://github.com/nbgoodall" target="_blank">GitHub</a></li>
+      <li><a href="https://x.com/nbgoodall" target="_blank">X</a></li>
+    </ul>
+  </body>
 </html>
