--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
     <h2>Links</h2>
     <ul>
+      <li><a href="/now">Now</a></li>
       <li><a href="https://github.com/nbgoodall" target="_blank">GitHub</a></li>
       <li><a href="https://x.com/nbgoodall" target="_blank">X</a></li>
     </ul>
