--- a/now/index.html
+++ b/now/index.html
@@ -13,7 +13,7 @@
     <meta name="twitter:site" content="@nbgoodall" />
   </head>
   <body>
-    <h1>Now</h1>
+    <h1><a href="/">Nick Goodall</a> > Now</h1>
 
     <p>
       <em>Updated 4th Jan, 2025.</em>
