--- a/now/index.html
+++ b/now/index.html
@@ -19,7 +19,11 @@
       <em>Updated 4th Jan, 2025.</em>
     </p>
 
-    <p>Rebuilding a boat, in Stratford-upon-Avon. Also programming!</p>
+    <p>
+      Rebuilding a narrowboat (<a href="https://katona.blog" target="_blank"
+        >follow along!</a
+      >), in Stratford-upon-Avon. Also programming.
+    </p>
 
     <p>
       <small>
