--- a/now/index.html
+++ b/now/index.html
@@ -16,7 +16,7 @@
     <h1><a href="/">Nick Goodall</a> > Now</h1>
 
     <p>
-      <em>Updated 4th Jan, 2025.</em>
+      <em>Updated 4<sup>th</sup> Jan, 2025.</em>
     </p>
 
     <p>
