--- a/index.html
+++ b/index.html
@@ -16,14 +16,11 @@
     <h1>Nick Goodall</h1>
 
     <p>
-      Hello, I’m Nick, a software engineer living ~somewhere~ and rebuilding a
-      boat. I love making things and I’m particularly good at building apps,
-      both for the web or mobile.
+      Hello, I’m Nick, a software engineer living in Stratford-upon-Avon, currently rebuilding a boat. I love tinkering with stuff, especially writing software for the web and mobile.
     </p>
 
     <p>
-      If there’s a project you want help with or want to say hi,
-      <a href="mailto:nickg@hey.com">send me an email.</a>
+      If there’s a project you want help with or want to say hi, <a href="mailto:nickg@hey.com">send me an email.</a>
     </p>
 
     <h2>Projects</h2>
@@ -33,8 +30,7 @@
     <p><a href="https://katona.blog" target="_blank">katona.blog</a></p>
 
     <p>
-      I'm rebuilding a narrowboat, and this is where I write updates and post
-      photos about it.
+      I'm rebuilding a narrowboat, and this is where I write updates and post photos about it.
     </p>
 
     <h3>Occasionly</h3>
@@ -42,8 +38,7 @@
     <p><a href="https://occasionly.io" target="_blank">occasionly.io</a></p>
 
     <p>
-      A platform-agnostic events manager for anyone tired of Facebook. Currently
-      you can invite people through WhatsApp, email, Signal, or Telegram.
+      A platform-agnostic events manager for anyone tired of Facebook. Currently you can invite people through WhatsApp, email, Signal, or Telegram.
     </p>
 
     <h2>Links</h2>
